# fun

./: .gitignore  README.md  fun.cabal  remake_grammar.sh
examples/bad/: eg1.in  eg1.out  eg10.in  eg11.in  eg12.in  eg13.in  eg14.in  eg14.out  eg15.in  eg16.in  eg2.in  eg2.out  eg3.out  eg4.in  eg4.out  eg5.in  eg5.out  eg6.in  eg6.out  eg7.in  eg8.in  eg8.out  eg9.in  eg9.out
examples/good/: eg1.out  eg10.in  eg10.out  eg11.in  eg12.in  eg13.in  eg14.in  eg14.out  eg15.in  eg15.out  eg16.in  eg16.out  eg17.in  eg17.out  eg18.in  eg18.out  eg19.in  eg19.out  eg2.in  eg2.out  eg20.in  eg21.in  eg21.out  eg22.in  eg22.out  eg23.in  eg23.out  eg24.out  eg25.in  eg25.out  eg26.in  eg26.out  eg27.in  eg27.out  eg28.in  eg28.out  eg29.in  eg29.out  eg3.in  eg3.out  (+13 more)
src/: BuiltIn.hs  Fun.cf  Interpreter.hs  Main.hs  Preparator.hs  Test.hs  Type.hs  TypeChecker.hs  Value.hs
src/Fun/: BuiltIn.hs  Fun.cf  Interpreter.hs  Main.hs  Preparator.hs  Type.hs  TypeChecker.hs  Value.hs
testsuite/: Test.hs
